refactor: ConversionOutputWriter のコード品質改善
- basenamePattern フィールドをコンストラクタで事前コンパイルし、
  write() 呼び出しごとの Pattern 再コンパイルを解消
- 重複 Javadoc ブロック（writePhaseJourneyHtml）を削除
- Collectors.toList() を .toList() に統一（Java 16+ スタイル）

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>